--- a/High-School.ipynb
+++ b/High-School.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (SQL, Jupyter Notebook) Project\n"
+    "### (SQL, Jupyter Notebook) Project (1)"
    ]
   },
   {
